--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome Path To College students!</h1>
+    <h1>My name is Ja'Niah Byrd</h1>\
+    <h2>Hi</h2>
 </body>
 </html>
